查看同步接口优化 新增快捷入口直接进入YApi查看同步的文档