@@ -21,7 +21,6 @@ import com.wdf.fudoc.apidoc.view.dialog.SyncApiCategoryDialog;
 import com.wdf.fudoc.common.FuDocMessageBundle;
 import com.wdf.fudoc.common.constant.MessageConstants;
 import com.wdf.fudoc.common.notification.FuDocNotification;
-import com.wdf.fudoc.components.ButtonTableCellEditor;
 import com.wdf.fudoc.components.FuTableComponent;
 import com.wdf.fudoc.components.factory.FuTableColumnFactory;
 import com.wdf.fudoc.util.GenFuDocUtils;
@@ -95,7 +94,7 @@ public abstract class AbstractSyncFuDocStrategy implements SyncFuDocStrategy {
                 : syncApiForDialog(apiProjectDTO, fuDocItemDataList, configData, psiClass);
 
         //6、提示同步结果
-        tipSyncResult(resultDTOList);
+        tipSyncResult(configData, resultDTOList);
     }
 
 
@@ -104,47 +103,42 @@ public abstract class AbstractSyncFuDocStrategy implements SyncFuDocStrategy {
      *
      * @param resultDTOList 同步结果
      */
-    private void tipSyncResult(List<SyncApiResultDTO> resultDTOList) {
+    private void tipSyncResult(BaseSyncConfigData configData, List<SyncApiResultDTO> resultDTOList) {
         //需要同步的接口数量(生成的接口文档数量可能和实际需要同步的接口数量不一致 有可能会在弹框中选择哪些接口同步哪些不同步)
         int syncApiSize = resultDTOList.size();
         if (syncApiSize < 1) {
             //本次没有需要同步的接口 不需要提示
             return;
         }
-        FuTableComponent<SyncApiResultDTO> fuTableComponent = new FuTableComponent<>();
-        ButtonTableCellEditor buttonTableCellEditor = new ButtonTableCellEditor("重新同步", row -> {
-            //按钮点击事件 发起同步
-            SyncApiResultDTO data = fuTableComponent.getData(row);
-            //刷新当前table
-            return "已同步";
-        });
-        JPanel showPanel = fuTableComponent.init(FuTableColumnFactory.syncApiResult(buttonTableCellEditor), resultDTOList, SyncApiResultDTO.class);
-        List<SyncApiResultDTO> successList = resultDTOList.stream().filter(a -> ApiSyncStatus.SUCCESS.getMessage().equals(a.getSyncStatus())).collect(Collectors.toList());
-        List<SyncApiResultDTO> faileList = resultDTOList.stream().filter(a -> ApiSyncStatus.FAIL.getMessage().equals(a.getSyncStatus())).collect(Collectors.toList());
+        String apiSystem = configData.getApiSystem().getCode();
+        JPanel showPanel = FuTableComponent.create(FuTableColumnFactory.syncApiResult(), resultDTOList, SyncApiResultDTO.class).createPanel();
+        List<SyncApiResultDTO> successList = resultDTOList.stream().filter(a -> ApiSyncStatus.SUCCESS.getMessage().equals(a.getSyncStatus())).toList();
+        List<SyncApiResultDTO> faileList = resultDTOList.stream().filter(a -> ApiSyncStatus.FAIL.getMessage().equals(a.getSyncStatus())).toList();
         SyncApiResultDTO resultDTO = resultDTOList.get(0);
         if (successList.size() == syncApiSize) {
+            String apiDocUrl = configData.getApiDocUrl(resultDTO);
             //全部同步成功情况
             if (syncApiSize == 1) {
                 //成功同步{0}接口到{0}分类下
                 String message = FuDocMessageBundle.message(MessageConstants.SYNC_API_SUCCESS_ONE, resultDTO.getApiName(), resultDTO.getCategoryName());
-                FuDocNotification.notifySyncApiResult(NotificationType.INFORMATION, message, showPanel);
+                FuDocNotification.notifySyncApiResult(NotificationType.INFORMATION, message, apiSystem, apiDocUrl, showPanel);
                 return;
             }
             //本次共计成功同步{0}个接口到{0}分类下
             String message = FuDocMessageBundle.message(MessageConstants.SYNC_API_SUCCESS_ALL, syncApiSize, resultDTO.getCategoryName());
-            FuDocNotification.notifySyncApiResult(NotificationType.INFORMATION, message, showPanel);
+            FuDocNotification.notifySyncApiResult(NotificationType.INFORMATION, message, apiSystem, apiDocUrl, showPanel);
             return;
         }
         if (faileList.size() == syncApiSize) {
             //全部同步失败情况 - 同步接口失败 失败原因:{0}
             String message = FuDocMessageBundle.message(MessageConstants.SYNC_API_FAILED_ALL, StringUtils.isNotBlank(resultDTO.getErrorMsg()) ? resultDTO.getErrorMsg() : "未知异常");
-            FuDocNotification.notifySyncApiResult(NotificationType.ERROR, message, showPanel);
+            FuDocNotification.notifySyncApiResult(NotificationType.ERROR, message, apiSystem, configData.getApiDocUrl(resultDTO), showPanel);
             return;
         }
         //部分成功 部分失败 - 本次成功同步{0}个接口到{1}分类下 同步失败{2}个接口
         SyncApiResultDTO successResultDTO = successList.get(0);
         String message = FuDocMessageBundle.message(MessageConstants.SYNC_API_SUCCESS_FAILED, successList.size(), successResultDTO.getCategoryName(), faileList.size());
-        FuDocNotification.notifySyncApiResult(NotificationType.WARNING, message, showPanel);
+        FuDocNotification.notifySyncApiResult(NotificationType.WARNING, message, apiSystem, configData.getApiDocUrl(successResultDTO), showPanel);
     }
 
 
@@ -198,14 +192,16 @@ public abstract class AbstractSyncFuDocStrategy implements SyncFuDocStrategy {
      * @return 同步结果
      */
     private SyncApiResultDTO singleSyncApi(BaseSyncConfigData configData, FuDocItemData fuDocItemData, ApiProjectDTO apiProjectDTO, ApiCategoryDTO apiCategoryDTO, ProjectSyncApiRecordData projectRecord) {
-        //发起同步
-        String errorMsg = doSingleApi(configData, fuDocItemData, apiProjectDTO, apiCategoryDTO);
-        if (StringUtils.isBlank(errorMsg)) {
+        String errorMsg = StringUtils.EMPTY, apiId = StringUtils.EMPTY;
+        try {
+            apiId = doSingleApi(configData, fuDocItemData, apiProjectDTO, apiCategoryDTO);
             //如果接口同步成功 则记录下来
             projectRecord.addRecord(buildApiSyncRecord(fuDocItemData, apiProjectDTO, apiCategoryDTO));
+        } catch (Exception e) {
+            errorMsg = e.getMessage();
         }
         //构建返回结果
-        return buildResult(fuDocItemData, apiProjectDTO, apiCategoryDTO, errorMsg);
+        return buildResult(apiId, fuDocItemData, apiProjectDTO, apiCategoryDTO, errorMsg);
     }
 
 
@@ -242,7 +238,7 @@ public abstract class AbstractSyncFuDocStrategy implements SyncFuDocStrategy {
             errorMsg.append(e.getMessage());
         }
         //构建同步失败结果
-        return ObjectUtils.listToList(fuDocItemDataList, fudoc -> buildResult(fudoc, apiProjectDTO, apiProjectDTO.getSelectCategory(), errorMsg.toString()));
+        return ObjectUtils.listToList(fuDocItemDataList, fudoc -> buildResult("", fudoc, apiProjectDTO, apiProjectDTO.getSelectCategory(), errorMsg.toString()));
     }
 
 
@@ -326,12 +322,15 @@ public abstract class AbstractSyncFuDocStrategy implements SyncFuDocStrategy {
      * @param errorMsg       同步失败原因
      * @return 同步结果对象
      */
-    private SyncApiResultDTO buildResult(FuDocItemData fuDocItemData, ApiProjectDTO apiProjectDTO, ApiCategoryDTO apiCategoryDTO, String errorMsg) {
+    private SyncApiResultDTO buildResult(String apiId, FuDocItemData fuDocItemData, ApiProjectDTO apiProjectDTO, ApiCategoryDTO apiCategoryDTO, String errorMsg) {
         SyncApiResultDTO resultDTO = new SyncApiResultDTO();
+        resultDTO.setApiId(apiId);
         resultDTO.setApiName(fuDocItemData.getTitle());
         resultDTO.setApiUrl(fuDocItemData.getUrlList().get(0));
+        resultDTO.setProjectId(apiProjectDTO.getProjectId());
         resultDTO.setProjectName(apiProjectDTO.getProjectName());
         if (Objects.nonNull(apiCategoryDTO)) {
+            resultDTO.setCategoryId(apiCategoryDTO.getCategoryId());
             resultDTO.setCategoryName(apiCategoryDTO.getCategoryName());
         }
         resultDTO.setSyncStatus(StringUtils.isBlank(errorMsg) ? ApiSyncStatus.SUCCESS.getMessage() : ApiSyncStatus.FAIL.getMessage());
